--- a/p8105_hw5_qc2307.md
+++ b/p8105_hw5_qc2307.md
@@ -374,6 +374,7 @@ spaghetti_plot
 ```
 
 ![](p8105_hw5_qc2307_files/figure-gfm/unnamed-chunk-6-1.png)<!-- -->
+Comment:
 
 # Problem 3
 
@@ -413,7 +414,7 @@ variables, you should fill in missing values with “virginica”.
 
 ``` r
 filling_table = function(x) {
-  if (is.numeric(x)) {
+  if(is.numeric(x)) {
     replace_na(x, mean(x, na.rm = TRUE))
   }
   else if(is.character(x)) {
@@ -425,10 +426,10 @@ filling_table = function(x) {
 Step3: Applying the function
 
 ``` r
-filled_data = map(iris_with_missing, filling_table) %>%
+iris_with_filled = map(iris_with_missing, filling_table) %>%
   as_tibble()
 
-filled_data
+iris_with_filled
 ```
 
     ## # A tibble: 150 × 5
