--- a/p8105_hw5_qc2307.md
+++ b/p8105_hw5_qc2307.md
@@ -198,7 +198,7 @@ homicide_df %>%
 
 ## Problem 2
 
-Step1: create a dataframe containing all files names.
+#### Step1: create a dataframe containing all files names.
 
 ``` r
 file_name = tibble(
@@ -231,8 +231,7 @@ file_name
     ## 19 exp_09.csv
     ## 20 exp_10.csv
 
-Step2: Iterate over file names and read in data for each subject and
-saving the result as a new variable in the dataframe.
+#### Step2: Iterate over file names and read in data for each subject and saving the result as a new variable in the dataframe.
 
 ``` r
 dataframe_new = 
@@ -471,9 +470,7 @@ dataframe_new
     ## 19 exp_09.csv  -0.4    1.08   2.66   2.7    2.8    2.64   3.51   3.27
     ## 20 exp_10.csv   1.09   2.8    2.8    4.3    2.25   6.57   6.09   4.64
 
-Step3: Tidy the result; manipulate file names to include control arm and
-subject ID, make sure weekly observations are “tidy”, and do any other
-tidying that’s necessary
+#### Step3: Tidy the result; manipulate file names to include control arm and subject ID, make sure weekly observations are “tidy”, and do any other tidying that’s necessary
 
 ``` r
 dataframe_new = 
@@ -508,8 +505,7 @@ dataframe_new
     ## 10 control 02         2            -0.88
     ## # … with 150 more rows
 
-Step4: Make a spaghetti plot showing observations on each subject over
-time, and comment on differences between groups.
+#### Step4: Make a spaghetti plot showing observations on each subject over time, and comment on differences between groups.
 
 ``` r
 spaghetti_plot = 
@@ -539,8 +535,7 @@ increase in observation values.
 
 # Problem 3
 
-Step1: The code chunk below loads the iris dataset from the tidyverse
-package
+#### Step1: The code chunk below loads the iris dataset from the tidyverse package
 
 ``` r
 set.seed(10)
@@ -568,7 +563,8 @@ iris_with_missing
     ## 10          4.9         3.1         NA           0.1 setosa 
     ## # … with 140 more rows
 
-Step2: Write a function to serve filling in the missing values
+#### Step2: Write a function to serve filling in the missing values
+
 requirement1: For numeric variables, you should fill in missing values
 with the mean of non-missing values. requirement2: For character
 variables, you should fill in missing values with “virginica”.
@@ -584,7 +580,7 @@ filling_table = function(x) {
 }
 ```
 
-Step3: Applying the function
+#### Step3: Applying the function
 
 ``` r
 iris_with_filled = map(iris_with_missing, filling_table) %>%
